<resources>
    <string name="app_name">Factha</string>
    <string name="app_title">Contribute For the Truth!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu_1">Apa Sih Factha Itu?</string>
    <string name="desc_menu_1">Factha merupakan aplikasi kanal berita yang menyediakan fitur filterisasi hoaks dan analisis berita</string>
    <string name="title_menu_2">Cek Validasi Berita Yang Kamu Baca</string>
    <string name="desc_menu_2">Cari tahu validasi berita yang kamu baca hanya dengan memasukkan berita atau artikel tersebut ke aplikasi kami!</string>
    <string name="title_menu_3">AI Analisis dan OCR Berita</string>
    <string name="desc_menu_3">Berita yang kamu masukkan akan diperiksa oleh AI kami untuk kemudian kami berikan hasil analisisnya dalam bentuk \"FAKTA\" dan \"HOAKS\" lengkap beserta dengan analisis keyakinan AI kami</string>
    <string name="title_menu_4">List Berita Teranalisis</string>
    <string name="desc_menu_4">Factha akan menampilkan berita yang telah kamu dan seluruh pengguna Factha telah masukkan, mari bergabung dengan kami dalam berkontribusi untuk menjaga integrasi informasi!</string>
    <string name="buat_akun">Gabung sekarang!</string>
    <string name="setting_heading1">Bahasa</string>
    <string name="setting_subheading1">Indonesia</string>
    <string name="setting_heading2">Pemberitahuan</string>
    <string name="setting_subheading2">Atur pemberitahuan</string>
    <string name="setting_heading3">Tentang aplikasi</string>
    <string name="setting_subheading3">Lihat informasi aplikasi</string>
    <string name="setting_heading4">Keluar akun</string>
    <string name="setting_subheading4">Keluar dari akun</string>
    <string name="image_factha_description">image_factha</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="email_tv">Email</string>
    <string name="password_tv">Password</string>
    <string name="password">password</string>
    <string name="log_in_button">Sign In</string>
    <string name="don_t_have_account">Tidak memiliki akun?</string>
    <string name="create_now">Create now</string>
    <string name="password_must_be_at_least_8_characters_long">Sandi perlu setidaknya 8 karakter!</string>
    <string name="register_tv">Register</string>
    <string name="name_tv">Name</string>
    <string name="name">name</string>
    <string name="register_button">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in">Log in</string>
    <string name="home">home</string>
    <string name="article">Article</string>
    <string name="saved">saved</string>
    <string name="setting">setting</string>
    <string name="factha">factha.</string>
    <string name="write">Tulis</string>
    <string name="check_your_article">Periksa Berita Anda</string>
    <string name="our_model_will_check_the_factual_accuracy_of_your_article">Kami akan memeriksa faktualitas berita yang dimasukkan</string>
    <string name="add">Tambah</string>
    <string name="selected_for_you">Dipilih untuk kamu</string>
    <string name="kendaraan">#Kendaraan</string>
    <string name="find_article">Cari Berita</string>
    <string name="find_saved_article">Cari Berita Tersimpan</string>
    <string name="create_article">Create Article</string>
    <string name="article_input_dummy_text">Masukkan teks berita disini...</string>
    <string name="tag">Tag</string>
    <string name="thumbnail_article">Tampilan Berita Anda</string>
    <string name="preview">Pratinjau</string>
    <string name="submit">Masukkan</string>
    <string name="tv_profile_name_example">Fulan Fulaniah</string>
    <string name="tv_email_user_example">fulan.flnah@gmail.com</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_can_t_empty">Email can\'t Empty</string>
    <string name="password_can_t_empty">Password Can\'t Empty</string>
    <string name="about_factha_title">&quot;Factha: Solusi Terdepan Untuk Menjaga Integritas Informasi dan Memfilter Hoaks&quot;</string>
    <string name="meet_the_team">Temui Tim Factha!</string>
    <string name="member1_name">Muhammad Dzaka</string>
    <string name="member2_name">Mohammad Izamul</string>
    <string name="member3_name">Fachrizal Ardiansyah</string>
    <string name="member5_name">Sabila Nadia</string>
    <string name="member4_name">Aisya Oxzana</string>
    <string name="member6_name">Mareta Aliana</string>
    <string name="member7_name">Marchel Yusuf</string>
    <string name="factha_copyrights">Factha (2024) | Allrights reserved</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="edit_profile">Ubah Data Profil</string>
    <string name="save">Save</string>
    <string name="change_photo">Ubah foto</string>
    <string name="fulana">Fulana</string>
    <string name="change_password">Ubah password?</string>
    <string name="status_account">Status Account</string>
    <string name="non_premium">Non premium</string>
    <string name="new_password">password baru</string>
    <string name="title">Title</string>
    <string name="dialog_long_text_example_text">Teks berita</string>
    <string name="n_percent">N%</string>
    <string name="berita_penuh">Teks Berita</string>
    <string name="beritanya_disini_example">Beritanya disini</string>
    <string name="hoaks">HOAKS</string>
    <string name="old_password">password_lama</string>
    <string name="ocr_input">Coba Fitur OCR</string>
    <string name="pengembangan">Pengembangan</string>
    <string name="fitur_masih_dalam_masa_pengembangan">Fitur masih dalam masa pengembangan!</string>
    <string name="tutup">Tutup</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="apakah_anda_yakin_keluar_akun">Apakah anda yakin keluar akun?</string>
    <string name="keluar">Keluar</string>
    <string name="batal">Batal</string>
    <string name="pilih_bahasa">Pilih bahasa</string>
    <string name="bahasa_yang_dipilih">Bahasa yang dipilih: %1$s</string>
    <string name="cari_berita">Cari Berita</string>
    <string name="mencari_berita">Mencari Berita</string>
    <string-array name="language_options">
        <item name="indonesia">Indonesia</item>
        <item name="english">English</item>
    </string-array>
    <string-array name="pilihan_tag">
        <item name="politik">Politik</item>
        <item name="ekonomi">Ekonomi</item>
        <item name="kesehatan">Kesehatan</item>
        <item name="pendidikan">Pendidikan</item>
        <item name="sosialbudaya">Sosial Budaya</item>
        <item name="lalulintas">Lalu Lintas</item>
        <item name="hiburan">Hiburan</item>
    </string-array>
    <string name="piechart_hoaks">HOAKS</string>
    <string name="piechart_fakta">HOAKS</string>
    <string name="hasil_hoaks">HOAKS</string>
    <string name="hasil_fakta">FAKTA</string>
    <string name="hasil_prediksi">Hasil Prediksi:</string>
    <string name="catatan_prediksi">*Persebaran skor terlalu imbang, perlu kajian lanjut</string>
    <string name="analisis_berita">Analisis Berita</string>
    <string name="silahkan_tunggu_sistem_sedang_mengambil_text_dari_gambar">Sistem sedang mengambil text dari gambar</string>
    <string name="berhasil">Berhasil</string>
    <string name="berhasil_mengambil_text_dari_gambar">Berhasil mengambil text dari gambar</string>
    <string name="tidak_dapat_mengambil_text">Tidak dapat mengambil text</string>
    <string name="gagal">Gagal</string>
    <string name="gagal_saat_mengambil_text">Gagal saat mengambil text</string>
    <string name="pastikan_semua_data_sudah_terisi">Pastikan semua data sudah terisi!</string>
    <string name="sedang_memposting_dan_memvalidasi_berita">Sedang Memposting dan Memvalidasi Berita</string>
    <string name="berita_berhasil_diproses">Berita berhasil diproses</string>
    <string name="masukkan_berita_anda_disini">Masukkan berita Anda disini</string>
    <string name="oke">Oke</string>
    <string name="kembali">Kembali</string>
    <string name="belum_ada_berita_tersimpan">Belum ada berita yang tersimpan</string>
    <string name="pindai_teks_dari_gambar">Pindai teks dari gambar</string>
    <string name="sukses">Sukses!</string>
    <string name="login_sukses">Login Sukses</string>
</resources>