<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".view.activity.auth.RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image_factha_description"
        android:src="@drawable/factha_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/register_tv"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/name_tv"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/name_et_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/underline_bg_et"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/name"
                android:paddingVertical="6dp"
                android:textColorHint="@color/md_theme_outline"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/email_tv"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_et_register" />

            <EditText
                android:id="@+id/email_et_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/underline_bg_et"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/email"
                android:paddingVertical="6dp"
                android:textColorHint="@color/md_theme_outline"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/email_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/invalid_email"
                android:textColor="@color/md_theme_error"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/email_et_register"
                app:layout_constraintTop_toBottomOf="@id/email_et_register"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/password_tv"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_alert" />

            <EditText
                android:id="@+id/password_et_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/underline_bg_et"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/password"
                android:paddingVertical="6dp"
                android:textColorHint="@color/md_theme_outline"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_eye_close"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/password_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/password_must_be_at_least_8_characters_long"
                android:textColor="@color/md_theme_error"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/password_et_register"
                app:layout_constraintTop_toBottomOf="@id/password_et_register" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="?attr/colorPrimary"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_alert" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/already_have_account"
                android:textColor="@color/md_theme_outline"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
