<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".view.activity.auth.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image_factha_description"
        android:src="@drawable/factha_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_auth"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/username_tv"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/username_et_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/underline_bg_et"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/username"
            android:paddingVertical="6dp"
            android:textColorHint="@color/md_theme_outline"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/password_tv"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_et_login" />

        <EditText
            android:id="@+id/password_et_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/underline_bg_et"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/password"
            android:paddingVertical="6dp"
            android:textColorHint="@color/md_theme_outline"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/password_alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/password_must_be_at_least_8_characters_long"
            android:textColor="@color/md_theme_error"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/password_et_login"
            app:layout_constraintTop_toBottomOf="@id/password_et_login" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="?attr/colorPrimary"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/log_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_alert" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/don_t_have_account"
            android:textColor="@color/md_theme_outline"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/create_now"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>