<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".view.fragment.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/factha"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/btn_write"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/write"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/btn_write_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_write"
                android:layout_marginHorizontal="16dp" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_profile"
            android:visibility="visible"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/md_theme_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/cardview_rounded"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:src="@drawable/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CornerRounded"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/check_your_article"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ovo"
                android:text="@string/our_model_will_check_the_factual_accuracy_of_your_article"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/textView7"
                app:layout_constraintTop_toBottomOf="@id/textView7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_article"
                android:layout_width="110dp"
                android:layout_height="55dp"
                android:background="@drawable/rectangle_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/add"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/md_theme_outline"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/selected_for_you"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView9"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_selected_for_you"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/card_selected_for_you"/>

                <ProgressBar
                    android:id="@+id/loading_menu_selected_for_you"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"/>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
